@@ -1,3 +1,7 @@
+2003-05-05  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* tools/helper.mk: Kill implicit rule ".o".
+
 2003-04-28  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* Makefile (DLLS): Add epsapi, psapi and wsock32.
